KQueue testing.